Updated Index.html and added error handling to functions

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
       <p><a href="https://www.carjam.co.nz/">CarJam</a> is a resource for finding information about cars registered in NZ.</p>
 
-<p>Unofficial Python API for Carjam</p>
+<p>This unofficial python API allows you to interact with the site and retrieve data to use in other python projects.</p>
 
 <p>This API may stop functioning if CarJam updates their website code.<br />
 It is provided “as-is” with no implied warranty.<br />
-We assume no responsibility for any future issues or interruptions in API functionality as a result of using this library.</p>
+No responsibiliy is assumed for any future issues or interruptions in API functionality as a result of using this library.</p>
 
-<p>Find this library on PyPi <a href="https://pypi.org/project/carjam/">here</a></p>
+<p>Find this library on PyPi <a href="https://pypi.org/project/carjam/">here</a> and Github <a href="https://github.com/kianz20/CarJam-API">here</a></p>
 
 <h2 id="installation">Installation</h2>
 <p><code class="language-plaintext highlighter-rouge">pip install carjam</code></p>
